[gd_scene load_steps=3 format=3 uid="uid://m8c3muy7unwj"]

[ext_resource type="Script" path="res://UI/PauseMenu.gd" id="1_g85w4"]
[ext_resource type="PackedScene" uid="uid://dpg5rl83s7w7e" path="res://UI/quit pop up.tscn" id="1_heel0"]

[node name="Control" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g85w4")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -261.0
offset_top = -161.0
offset_right = 14.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "=PAUSED="
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="Save" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="Quit" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit to Main Menu"

[node name="Quit Game" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Exit to Desktop"

[node name="Control" parent="." instance=ExtResource("1_heel0")]
layout_mode = 1
offset_left = -92.0
offset_top = -36.0
offset_right = -92.0
offset_bottom = -36.0

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Quit Game" to="." method="_on_quit_game_pressed"]
